Fix first screen on IE

--- a/less/global.less
+++ b/less/global.less
@@ -554,6 +554,7 @@ header {
   background: @url-main no-repeat center center;
   background-size: cover;
   position: relative;
+  overflow: hidden;
 
   &.header > .container {
     position: static;
